--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-  <h1>santino</h1>
+  <h1>redes sociales</h1>
+<a href='https://facebook.com' >facebook</a>
+<a href='https://instagram.com/santis_oks'>instagram santino</a>
