--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
   <h1>redes sociales</h1>
 <a href='https://facebook.com' >facebook</a>
 <a href='https://instagram.com/santis_oks'>instagram santino</a>
+<a target='_blank' href='https://github.com/santismania'>mi cuenta de github</a>
